[tool.poetry]
name = "HexColor"
version = "1.0.0"
description = "Add HexColor type."
authors = ["qiufeng <appleidqiufeng@outlook.com>"]
readme = "README.md"
license = "MIT"
keywords = ["hex", "color", "hexcolor", "type"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Homepage" = "https://github.com/qiufengcute/HexColor"
"Repository" = "https://github.com/qiufengcute/HexColor"
"Changelog" = "https://github.com/qiufengcute/HexColor/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"